--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -8,6 +8,7 @@
       <% @companies.each do |company| %>
         <a href="<%= company_path(company) %>" class="list-group-item list-group-item-action">
           <%= company.name %>
+          <%= link_to 'Delete', company, method: :delete, remote: true, data: { confirm: 'Are you sure?' } %>
         </a>
       <% end %>
     </ul>
