--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -11,7 +11,7 @@
   <div class="bg-success">
     <div class="container p-5 text-white">
       <h1><%= @company.name %></h1>
-      <h3>City, State</h3>
+      <h3><%= @city.present? ? @city : 'City'%>, <%= @state.present? ? @state : 'State'%></h3>
       <pre>☝️ This is what needs to be udpated. Examples: Atlanta, GA or Nashvile, TN</pre>
     </div>
   </div>
